unpackaged/main/default/objects/Pet__c/Pet__c.object-meta.xml
<CustomObject>
    <label>Pet</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Pet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>