unpackaged/main/default/objects/Pet__c/fields/Border_Caretaker__c.field-meta.xml
<CustomField>
    <fullName>Border_Caretaker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Border/Caretaker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pets (Border/Caretaker)</relationshipLabel>
    <relationshipName>Pets3</relationshipName>
    <type>Lookup</type>
</CustomField>