unpackaged/main/default/objects/Pet__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Breed</label>
    <length>200</length>
    <type>Text</type>
</CustomField>