unpackaged/main/default/objects/Pet__c/fields/Certified_Support_Animal__c.field-meta.xml
<CustomField>
    <fullName>Certified_Support_Animal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified Support Animal</label>
    <type>Checkbox</type>
</CustomField>