unpackaged/main/default/objects/Pet__c/fields/Dogwalker__c.field-meta.xml
<CustomField>
    <fullName>Dogwalker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dogwalker (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pets (Dogwalker)</relationshipLabel>
    <relationshipName>Pets1</relationshipName>
    <type>Lookup</type>
</CustomField>