unpackaged/main/default/objects/Pet__c/fields/Dogwalker_Account__c.field-meta.xml
<CustomField>
    <fullName>Dogwalker_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dogwalker (Account)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pets (Dogwalker (Account))</relationshipLabel>
    <relationshipName>Pets5</relationshipName>
    <type>Lookup</type>
</CustomField>