unpackaged/main/default/objects/Pet__c/fields/Emergency_Hospital__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Hospital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emergency Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pets (Emergency Hospital)</relationshipLabel>
    <relationshipName>Pets4</relationshipName>
    <type>Lookup</type>
</CustomField>