unpackaged/main/default/objects/Pet__c/fields/Emotional_Support_Animal__c.field-meta.xml
<CustomField>
    <fullName>Emotional_Support_Animal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emotional Support Animal</label>
    <type>Checkbox</type>
</CustomField>