unpackaged/main/default/objects/Pet__c/fields/Groomer__c.field-meta.xml
<CustomField>
    <fullName>Groomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Groomer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pets (Doggroomer)</relationshipLabel>
    <relationshipName>Pets1</relationshipName>
    <type>Lookup</type>
</CustomField>