unpackaged/main/default/objects/Pet__c/fields/Owner_Account__c.field-meta.xml
<CustomField>
    <fullName>Owner_Account__c</fullName>
    <label>Owner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pets</relationshipLabel>
    <relationshipName>Pets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>