unpackaged/main/default/objects/Pet__c/fields/Pet_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pet_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pet Notes</label>
    <type>TextArea</type>
</CustomField>