unpackaged/main/default/objects/Pet__c/fields/Size_of_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Size_of_Carrier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Size of Carrier</label>
    <type>TextArea</type>
</CustomField>