unpackaged/main/default/objects/Pet__c/fields/Travel_Documents__c.field-meta.xml
<CustomField>
    <fullName>Travel_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Documents</label>
    <type>Checkbox</type>
</CustomField>