unpackaged/main/default/objects/Pet__c/fields/Type_of_Pet__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Pet__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type of Pet</label>
    <length>200</length>
    <type>Text</type>
</CustomField>