unpackaged/main/default/objects/Pet__c/fields/Veterinarian__c.field-meta.xml
<CustomField>
    <fullName>Veterinarian__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Veterinarian</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pets (Veterinarian)</relationshipLabel>
    <relationshipName>Pets2</relationshipName>
    <type>Lookup</type>
</CustomField>